fixed galelry gap

--- a/components/blocksEdit/gallery.css
+++ b/components/blocksEdit/gallery.css
@@ -8,20 +8,52 @@
   padding: 0;
   margin: 0;
   position: relative;
+  width:50%;
+  float: left;
+}
+
+.block-masonry {
+  width: 100%;
+}
+
+.block-gallery-imgs-img__preview {
+  opacity: 0.5;
 }
 
 .block-gallery-imgs-img img {
-  width: 100%;
-  height: 100%;
+  display: block;
+  max-width: 100%;
   object-fit: cover;
+  z-index: 398;
+}
+
+.img-overlay {
+  z-index: 399;
+  position: absolute;
+  top:0;bottom:0;
+  right:0;left:0;
+  opacity: 0;
+  background: black;
+  transition: opacity 500ms cubic-bezier(0.2,1,0.3,1);
+}
+
+.img-overlay:hover {
+  opacity: 0.5;
 }
 
 .block-gallery-imgs-close {
   position: absolute;
   top:0;
   right:0;
+  z-index: 400;
   opacity:0.8;
-  padding: 1rem;
+  margin: 1rem;
+}
+
+.block-masonry:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .file-input {
@@ -55,8 +87,4 @@
 .file-input-tool__open {
   transition: transform 500ms cubic-bezier(0.2,1,0.3,1);
   transform: rotate(0deg);
-}
-
-.block-masonry {
-  margin: 0 auto;
 }
