--- a/components/tools/tools.css
+++ b/components/tools/tools.css
@@ -1,7 +1,7 @@
 .toolbar-icon {
   width: 22px;
   height: 22px;
-  padding: 1rem 0.5rem;
+  margin: 1rem 0.5rem;
 }
 
 .toolbar {
