--- a/pages/global.css
+++ b/pages/global.css
@@ -37,3 +37,5 @@ input {
 input:focus {
   outline: none;
 }
+
+* { box-sizing: border-box; }
